# RealSense_ws

./: README.md
jupyter_notebook/: Untitled.ipynb  det_msg.npy  test_3d_pca.ipynb  test_detmsg.ipynb  test_gpu.ipynb
jupyter_notebook/.ipynb_checkpoints/: test_3d_pca-checkpoint.ipynb
jupyter_notebook/utils/: simplePCA.py
src/data_collection/: package.xml  setup.py
src/data_collection/data_collection/: collect_rgb.py
src/data_collection/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/data_collection/launch/: collect_rgb.launch.py
src/data_collection/log/: latest_build
src/data_collection/src/: collect_rgb.py  test.py
src/hello_moveit/: package.xml
src/mobilesam/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/mobilesam/mobilesam/: postprocessing.py
src/mobilesam/scripts/: sam_mask.py
src/realsense_collection/: package.xml  setup.cfg  setup.py
src/realsense_collection/launch/: camera.launch.py  collect_rgb.launch.py
src/realsense_collection/realsense_collection/: collect_rgb.py  telekey.py
src/ultralytics_ros/: CMakeLists.txt  package.xml  requirements.txt  setup.cfg  setup.py
src/ultralytics_ros/launch/: tracker.launch.py
src/ultralytics_ros/script/: tracker_node.py
src/ultralytics_ros/script/utils/: postprocessing.py
src/ultralytics_ros/utils/: postprocessing.py
src/vision/: package.xml  setup.py  test_vect2qua.py
src/vision/config/: camera_intrinsics.yaml  eye2hand.yaml  test_yaml.py
src/vision/utils/: pca.py  realsense.py
src/vision/vision/: det_tf.py  det_tf_pc.py  eye2hand.py  test.py
(+13 files in other folders)
